--- a/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
+++ b/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
@@ -88,37 +88,39 @@
     "def contains_kanji(token):\n",
     "    return any(is_kanji(char) for char in token)\n",
     "\n",
-    "vocab_freq = defaultdict(int)\n",
-    "kana_words_freq = defaultdict(int)\n",
+    "pure_kanji_freq = defaultdict(int)\n",
+    "kanji_kana_freq = defaultdict(int)\n",
+    "kana_freq = defaultdict(int)\n",
     "\n",
     "def tokenize_text(text):\n",
-    "    return [word.surface() for word in tokenizer_obj.tokenize(text)]\n",
+    "    return [word.dictionary_form() for word in tokenizer_obj.tokenize(text)]\n",
     "\n",
-    "for sentence_list in all_sentences:\n",
-    "    for sentence in sentence_list:\n",
-    "        tokens = tokenize_text(sentence)\n",
-    "        for token in tokens:\n",
-    "            if not token:\n",
-    "                continue\n",
-    "            if is_pure_kanji(token):\n",
-    "                vocab_freq[token] += 1\n",
-    "            elif contains_kanji(token):\n",
-    "                vocab_freq[token] += 1\n",
-    "            else:\n",
-    "                kana_words_freq[token] += 1\n",
+    "for sentence in filtered_sentences:\n",
+    "    tokens = tokenize_text(sentence)\n",
+    "    for token in tokens:\n",
+    "        if not token:\n",
+    "            continue\n",
+    "        if is_pure_kanji(token):\n",
+    "            pure_kanji_freq[token] += 1\n",
+    "        elif contains_kanji(token):\n",
+    "            kanji_kana_freq[token] += 1\n",
+    "        else:\n",
+    "            kana_freq[token] += 1\n",
     "\n",
-    "kanji_words = sorted(vocab_freq.items(), key=lambda item: item[1], reverse=True)\n",
-    "kana_words = sorted(kana_words_freq.items(), key=lambda item: item[1], reverse=True)\n",
+    "kanji_words = sorted(pure_kanji_freq.items(), key=lambda item: item[1], reverse=True)\n",
+    "kanji_kana_words = sorted(kanji_kana_freq.items(), key=lambda item: item[1], reverse=True)\n",
+    "kana_words = sorted(kana_freq.items(), key=lambda item: item[1], reverse=True)\n",
     "\n",
-    "print(\"Number of Unique Vocabulary:\", len(kanji_words))\n",
-    "print(\"Number of Removed Words:\", len(kana_words))\n",
+    "print(\"Number of Pure Kanji Words:\", len(kanji_words))\n",
+    "print(\"Number of Kanji + Kana Words:\", len(kanji_kana_words))\n",
+    "print(\"Number of Kana Words:\", len(kana_words))\n",
     "\n",
-    "all_vocab = kanji_words + kana_words\n",
+    "all_vocab = kanji_words + kanji_kana_words + kana_words\n",
     "sorted_occurences = sorted(all_vocab, key=lambda x: x[1], reverse=True)\n",
     "print(f'Total Unique Words: {len(sorted_occurences)}')\n",
     "\n",
-    "total_occurrences = sum(count for word, count in kana_words + kanji_words)\n",
-    "print(f'Total Words: {total_occurrences}')\n"
+    "total_occurrences = sum(count for word, count in (kana_words + kanji_kana_words + kanji_words))\n",
+    "print(f'Total Words: {total_occurrences}')"
    ]
   },
   {
@@ -127,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_vocab"
+    "kanji_kana_words[:10]"
    ]
   },
   {
