Improve lemmatization for manga

--- a/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
+++ b/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
@@ -17,9 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 72 folders containing text.\n"
+     ]
+    }
+   ],
    "source": [
     "file_list = os.listdir('.')\n",
     "pattern2 = r\"^VOL +\"\n",
@@ -31,9 +39,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished processing 5 folders\n",
+      "Finished processing 10 folders\n",
+      "Finished processing 15 folders\n",
+      "Finished processing 20 folders\n",
+      "Finished processing 25 folders\n",
+      "Finished processing 30 folders\n",
+      "Finished processing 35 folders\n",
+      "Finished processing 40 folders\n",
+      "Finished processing 45 folders\n",
+      "Finished processing 50 folders\n",
+      "Finished processing 55 folders\n",
+      "Finished processing 60 folders\n",
+      "Finished processing 65 folders\n",
+      "Finished processing 70 folders\n",
+      "Finished processing 72 folders\n",
+      "Found 80841 sentences across 72 folders.\n"
+     ]
+    }
+   ],
    "source": [
     "all_sentences = []\n",
     "\n",
@@ -58,9 +89,10 @@
     "\n",
     "        all_sentences.extend(cleaned_lines)\n",
     "        \n",
-    "    if (i % 5) == 0:\n",
-    "      print(f'Finished processing {matching_folders[i]}')\n",
+    "    if (i % 5) == 0 and i != 0:\n",
+    "      print(f'Finished processing {i} folders')\n",
     "\n",
+    "print(f'Finished processing {len(matching_folders)} folders')\n",
     "print(f'Found {len(all_sentences)} sentences across {len(matching_folders)} folders.')\n"
    ]
   },
@@ -73,9 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Pure Kanji Words: 9672\n",
+      "Number of Kanji + Kana Words: 4628\n",
+      "Number of Kana Words: 12028\n",
+      "Total Unique Words: 26328\n",
+      "Total Words: 942687\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer_obj = dictionary.Dictionary(dict=\"full\").create(tokenizer.Tokenizer.SplitMode.C)\n",
     "\n",
@@ -95,8 +139,8 @@
     "def tokenize_text(text):\n",
     "    return [word.dictionary_form() for word in tokenizer_obj.tokenize(text)]\n",
     "\n",
-    "for sentence in filtered_sentences:\n",
-    "    tokens = tokenize_text(sentence)\n",
+    "for sentence in all_sentences:\n",
+    "    tokens = tokenize_text(str(sentence))\n",
     "    for token in tokens:\n",
     "        if not token:\n",
     "            continue\n",
@@ -125,9 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('お前', 3699),\n",
+       " ('言う', 1639),\n",
+       " ('分かる', 1137),\n",
+       " ('思う', 987),\n",
+       " ('行く', 852),\n",
+       " ('来る', 843),\n",
+       " ('見る', 805),\n",
+       " ('知る', 803),\n",
+       " ('死ぬ', 691),\n",
+       " ('同じ', 501)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kanji_kana_words[:10]"
    ]
@@ -141,9 +205,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n",
+      "New JSON file term_meta_bank_1.json has been created.\n"
+     ]
+    }
+   ],
    "source": [
     "JPDB_freq = \"./JPDB_term_meta_bank_1.json\"\n",
     "\n",
@@ -198,9 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed 6223 duplicates successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "with open(term_meta_json, 'r', encoding='utf-8') as file:\n",
     "    term_data = json.load(file)\n",
@@ -232,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,9 +371,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "term_meta_bank_1.json is ready for use!\n"
+     ]
+    }
+   ],
    "source": [
     "with open(term_meta_json, 'r', encoding='utf-8') as file:\n",
     "    term_data = json.load(file)\n",
