--- a/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
+++ b/freq_dict_maker-mokuro/freq_dict_maker-mokuro (zehdi).ipynb
@@ -249,7 +249,7 @@
     "              'value': freq,\n",
     "              'displayValue': f\"{freq}㋕\"\n",
     "          }\n",
-    "print('Success!')\n",
+    "    print('Success!')\n",
     "\n",
     "update_frequencies(filtered_data, new_frequencies)\n",
     "\n",
@@ -403,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -421,5 +421,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
